--- a/HTML/src/semi/layout/layout.html
+++ b/HTML/src/semi/layout/layout.html
@@ -9,33 +9,55 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <title>Insert title here</title>
 <style>
-	#side {
-		background:black;
-		width:50px;
-		height:800px;
-	}
-	
-	#top {
-		background:red;
-		width:900px;
-		height:50px;
-	}
-	
-	.main {
-		width: 100%;
+	html, body {
+		height:100%;
 	}
 </style>
 </head>
 <body>
+<section class="top">
+    <header>
+      <div class="container">
+        <ul class="content">
+          <li>
+          		필요시 추가
+          </li>
+        </ul>
+        
+    <ul class="content-right">
+		<li>
+				필요시 추가
+		</li>      
+    </ul>
+      </div>
+    </header>
+</section>
+<nav>
 <div class="header row no-gutters ">
   <div class="col-sm-6 col-md-8 d-flex flex-row">메뉴 영역</div>
   <div class="col-6 col-md-4 d-flex flex-row-reverse">로그인 관련 영역</div>
 </div>
- <div class="d-flex align-items-start flex-sm-column bd-highlight mb-3" style="height: 200px;">
-  <div class="mb-auto p-2 bd-highlight">Flex item</div>
-  <div class="p-2 bd-highlight">Flex item</div>
-  <div class="p-2 bd-highlight">Flex item</div>
+</nav>
+<div class="row" style="height:80%">
+<div class="col">
+ <div class="d-flex align-items-start flex-column">
+  <div>Flex item</div>
+  <div>Flex item</div>
+  <div>Flex item</div>
 </div>
-	<div class="main"></div>
+</div>
+<div class="col-10">
+		<div class="content">
+			메인 바디 정보
+		</div>
+	</div>
+</div>
+<footer>
+	<div class="row" style="height:10%">
+		<div class="col">
+		footer
+		</div>
+	</div>
+</footer>
 </body>
 </html>
