--- a/HTML/src/semi/layout/layout.html
+++ b/HTML/src/semi/layout/layout.html
@@ -3,61 +3,58 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<script
+	src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <title>Insert title here</title>
 <style>
-	html, body {
-		height:100%;
-	}
+.maininfo {
+	width: 500px;
+	heigth: 500px;
+}
 </style>
 </head>
 <body>
-<section class="top">
-    <header>
-      <div class="container">
-        <ul class="content">
-          <li>
-          		필요시 추가
-          </li>
-        </ul>
-        
-    <ul class="content-right">
-		<li>
-				필요시 추가
-		</li>      
-    </ul>
-      </div>
-    </header>
-</section>
-<nav>
-<div class="header row no-gutters ">
-  <div class="col-sm-6 col-md-8 d-flex flex-row">메뉴 영역</div>
-  <div class="col-6 col-md-4 d-flex flex-row-reverse">로그인 관련 영역</div>
-</div>
-</nav>
-<div class="row" style="height:80%">
-<div class="col">
- <div class="d-flex align-items-start flex-column">
-  <div>Flex item</div>
-  <div>Flex item</div>
-  <div>Flex item</div>
-</div>
-</div>
-<div class="col-10">
-		<div class="content">
-			메인 바디 정보
+	<section class="top bg-dark">
+		<header>
+			<div class="container">
+				<ul class="content">
+					<li>필요시 추가</li>
+				</ul>
+				<ul class="content-right">
+					<li>필요시 추가</li>
+				</ul>
+			</div>
+		</header>
+	</section>
+	<nav>
+		<div class="header row no-gutters bg-success">
+			<div class="col-6 col-sm-7 col-md-8 d-flex flex-row">메뉴 영역</div>
+			<div class="col-6 col-sm-5 col-md-4 d-flex flex-row-reverse">로그인
+				관련 영역</div>
 		</div>
-	</div>
-</div>
-<footer>
-	<div class="row" style="height:10%">
-		<div class="col">
-		footer
+	</nav>
+	<div class="d-flex ">
+		<div class="leftside col- col-sm-2 col-md-3 bg-danger">
+			<div class="d-flex align-items-start flex-column">
+				<div>Flex item</div>
+				<div>Flex item</div>
+				<div>Flex item</div>
+			</div>
 		</div>
+		<div class="maininfo col-10 col-sm-10 col-md-9">
+			<div class="bg-info">메인 바디 정보</div>
+		</div>
+	<footer>
 	</div>
-</footer>
+	<div class="row h-10">
+		<div class="col">footer</div>
+	</div>
+	</footer>
 </body>
 </html>
